<resources>
    <string name="app_name">Eventy App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="event">Event</string>
    <string name="booking">Booking</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>

    <string name="facebook_app_id">2521626878154553</string>
    <string name="fb_login_protocol_scheme">fb2521626878154553</string>

</resources>
